# nyc-taxi-trip-analysis

./: .gitignore  README.md  api.py  main.py  predict_cli.py  pyproject.toml  task2_main.py
frontend/src/: App.jsx  index.css
src/: __init__.py  data_cleaning.py  features.py  models.py  utils.py  visualization.py
src/nyc_taxi_eda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
