[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi-eda"
version = "0.1.0"
description = "Exploratory Data Analysis on NYC Taxi Trip Records"
authors = [{ name = "AI Intern" }]
requires-python = ">=3.9"
dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "pyarrow==16.0.0",
    "scipy==1.13.0",
    "fpdf2==2.7.9",
    "requests==2.31.0"
]
